--- a/index.html
+++ b/index.html
@@ -10,7 +10,34 @@
 </head>
 
 <body>
+  <div id="wrap">
+    <header class="header">
+      <div class="logo_box">
+        <img src="./images/logo.png" alt="logo">
+      </div>
 
+      <div class="nav_box">
+        <ul>
+          <li>제네시스 GV80</li>
+          <li>GV80 디자인</li>
+          <li>GV80의 모든것</li>
+          <li>GV80의 성능</li>
+        </ul>
+      </div>
+    </header>
+
+    <main>
+      <section class="visual">
+        <div class="visual_bg"></div>
+        <div class="text_box">
+          <h1>GENESIS GV80</h1>
+          <p class="tit">강력한 파워가 만드는 다이내믹 드라이빙</p>
+          <p>어떤 도로에서도 발휘하는 최고의 주행 성능</p>
+        </div>
+
+      </section>
+    </main>
+  </div>
 </body>
 
 </html>
