--- a/index.html
+++ b/index.html
@@ -13,15 +13,28 @@
   <div id="wrap">
     <header class="header">
       <div class="logo_box">
-        <img src="./images/logo.png" alt="logo">
+        <a href="./index.html">
+          <img src="./images/logo.png" alt="logo">
+        </a>
       </div>
 
       <div class="nav_box">
         <ul>
-          <li>제네시스 GV80</li>
-          <li>GV80 디자인</li>
-          <li>GV80의 모든것</li>
-          <li>GV80의 성능</li>
+          <li>
+            <a href="#!">제네시스 GV80</a>
+          </li>
+
+          <li>
+            <a href="#!">GV80 디자인</a>
+          </li>
+
+          <li>
+            <a href="#!">GV80의 모든것</a>
+          </li>
+
+          <li>
+            <a href="#!">GV80의 성능</a>
+          </li>
         </ul>
       </div>
     </header>
@@ -30,9 +43,11 @@
       <section class="visual">
         <div class="visual_bg"></div>
         <div class="text_box">
-          <h1>GENESIS GV80</h1>
-          <p class="tit">강력한 파워가 만드는 다이내믹 드라이빙</p>
-          <p>어떤 도로에서도 발휘하는 최고의 주행 성능</p>
+          <div class="text_inner">
+            <p class="sub">GENESIS GV80</p>
+            <p class="tit">강력한 파워가 만드는 다이내믹 드라이빙</p>
+            <p class="sub_1">어떤 도로에서도 발휘하는 최고의 주행 성능</p>
+          </div>
         </div>
 
       </section>
