--- a/index.html
+++ b/index.html
@@ -41,15 +41,21 @@
 
     <main>
       <section class="visual">
-        <div class="visual_bg"></div>
+        <div class="visual_bg">
+          <div class="arrow_bottom">arrow</div>
+        </div>
         <div class="text_box">
           <div class="text_inner">
+            <div class="text_top">
             <p class="sub">GENESIS GV80</p>
             <p class="tit">강력한 파워가 만드는 다이내믹 드라이빙</p>
             <p class="sub_1">어떤 도로에서도 발휘하는 최고의 주행 성능</p>
           </div>
-        </div>
 
+          
+          </div>
+        </div>
+       
       </section>
     </main>
   </div>
