--- a/index.html
+++ b/index.html
@@ -5,59 +5,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Genesis</title>
-  <link rel="stylesheet" href="./css/main.css">
+  <!-- <meta http-equiv="refresh" content="4;url=./main.html"> -->
+  <title>Document</title>
+  <link rel="stylesheet" href="./css/intro.css">
+
+  <script src="./js/intro.js" defer></script>
 </head>
 
 <body>
   <div id="wrap">
-    <header class="header">
-      <div class="logo_box">
-        <a href="./index.html">
-          <img src="./images/logo.png" alt="logo">
-        </a>
+    <div class="intro">
+      <img src="./images/logo.png" alt="">
+      <h1>GENESIS GV80</h1>
+
+      <div class="count_box">
+        <h2 class="counting"></h2>
       </div>
-
-      <div class="nav_box">
-        <ul>
-          <li>
-            <a href="#!">제네시스 GV80</a>
-          </li>
-
-          <li>
-            <a href="#!">GV80 디자인</a>
-          </li>
-
-          <li>
-            <a href="#!">GV80의 모든것</a>
-          </li>
-
-          <li>
-            <a href="#!">GV80의 성능</a>
-          </li>
-        </ul>
-      </div>
-    </header>
-
-    <main>
-      <section class="visual">
-        <div class="visual_bg">
-          <div class="arrow_bottom">arrow</div>
-        </div>
-        <div class="text_box">
-          <div class="text_inner">
-            <div class="text_top">
-            <p class="sub">GENESIS GV80</p>
-            <p class="tit">강력한 파워가 만드는 다이내믹 드라이빙</p>
-            <p class="sub_1">어떤 도로에서도 발휘하는 최고의 주행 성능</p>
-          </div>
-
-          
-          </div>
-        </div>
-       
-      </section>
-    </main>
+    </div>
   </div>
 </body>
 
