--- a/main.html
+++ b/main.html
@@ -47,15 +47,49 @@
         <div class="text_box">
           <div class="text_inner">
             <div class="text_top">
-            <p class="sub">GENESIS GV80</p>
-            <p class="tit">강력한 파워가 만드는 다이내믹 드라이빙</p>
-            <p class="sub_1">어떤 도로에서도 발휘하는 최고의 주행 성능</p>
-          </div>
+              <p class="sub">GENESIS GV80</p>
+              <p class="tit">강력한 파워가 만드는 다이내믹 드라이빙</p>
+              <p class="sub_1">어떤 도로에서도 발휘하는 최고의 주행 성능</p>
+            </div>
 
-          
+
           </div>
         </div>
-       
+
+      </section>
+
+      <section>
+        <div class="tit">
+          <h1>GV80을 만나보세요!</h1>
+        </div>
+        <div class="gallery">
+          <div class="gallery_left">
+            <div class="img_box">
+              <img class="hei" src="./images/genesis_img1.jpg" alt="">
+            </div>
+            <div class="img_box">
+              <img class="hei" src="./images/genesis_img2.jpg" alt="">
+            </div>
+          </div>
+
+          <div class="gallery_center">
+            <div class="img_box">
+              <img class="hei" src="./images/genesis_img3.jpg" alt="">
+            </div>
+            <div class="img_box">
+              <img class="hei" src="./images/genesis_img4.jpg" alt="">
+            </div>
+          </div>
+
+          <div class="gallery_right">
+            <div class="img_box">
+              <img class="hei" src="./images/genesis_img5.jpg" alt="">
+            </div>
+            <div class="img_box">
+              <img class="hei" src="./images/genesis_img6.jpg" alt="">
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </div>
