--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <meta http-equiv="refresh" content="4;url=./main.html"> -->
+  <meta http-equiv="refresh" content="4;url=./main.html">
   <title>Document</title>
   <link rel="stylesheet" href="./css/intro.css">
 
