--- a/main.html
+++ b/main.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Genesis</title>
   <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+
+  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+  <script src="./js/main.js" defer></script>
 </head>
 
 <body>
@@ -21,19 +25,23 @@
       <div class="nav_box">
         <ul>
           <li>
-            <a href="#!">제네시스 GV80</a>
+            <a href="#!">GV80</a>
           </li>
 
           <li>
-            <a href="#!">GV80 디자인</a>
+            <a href="#!">DESIGN</a>
           </li>
 
           <li>
-            <a href="#!">GV80의 모든것</a>
+            <a href="#!">COLOR</a>
           </li>
 
           <li>
-            <a href="#!">GV80의 성능</a>
+            <a href="#!">PERFORMANCE</a>
+          </li>
+
+          <li>
+            <a href="#!">GALLERY</a>
           </li>
         </ul>
       </div>
@@ -48,14 +56,90 @@
           <div class="text_inner">
             <div class="text_top">
               <p class="sub">GENESIS GV80</p>
-              <p class="tit">강력한 파워가 만드는 다이내믹 드라이빙</p>
-              <p class="sub_1">어떤 도로에서도 발휘하는 최고의 주행 성능</p>
+              <p class="tit">
+                시선을 사로잡는<br />
+                역동적 우아함
+              </p>
+              <p class="sub_1">SUV의 역동성과 세단의 우아함의 조화</p>
             </div>
 
 
           </div>
         </div>
 
+
+      </section>
+
+      <div class="different">
+        <p>* 본 페이지에서 소개되는 상품의 디자인, 색상, 특성, 사양 등은 참고용이며 실제 제품과 다를 수 있습니다.</p>
+      </div>
+
+
+      <section class="design_section">
+        <div class="design_bg">
+          <img src="./images/genesis_design_bg.jpg" alt="">
+        </div>
+        <div class="design_text">
+          <h2>DESIGN</h2>
+          <div class="design_desc">
+            <p>
+              GV80는 SUV의 역동성(Athletic)과 세단의 우아함(Elegance)이 조화된 외장 디자인과, 볼드한 조형에 여백의 미를 강조한 고급스러운 내장 디자인으로 제네시스의 대형
+              SUV로서의 존재감을 극대화합니다.
+            </p>
+          </div>
+        </div>
+
+        <div class="design_img">
+          <img src="./images/genesis-kr-gallery-gv80-interior-22-popup-1920x960-ko.jpg" alt="">
+          <img src="./images/inside.jpg" alt="">
+        </div>
+      </section>
+
+
+
+      <section class="color_section">
+        <h1>GV80 컬러를 확인해보세요</h1>
+        <div class="swiper genesis_color">
+          <ul class="swiper-wrapper">
+
+            <li class="swiper-slide">
+              <div class="color_box">
+                <img src="./images/gv80_white.png" alt="">
+              </div>
+            </li>
+
+            <li class="swiper-slide">
+              <div class="color_box">
+                <img src="./images/gv80_silver.png" alt="">
+              </div>
+            </li>
+
+            <li class="swiper-slide">
+              <div class="color_box">
+                <img src="./images/gv80_black.png" alt="">
+              </div>
+            </li>
+
+            <li class="swiper-slide">
+              <div class="color_box">
+                <img src="./images/gv80_blue.png" alt="">
+              </div>
+            </li>
+
+            <li class="swiper-slide">
+              <div class="color_box">
+                <img src="./images/gv80_red.png" alt="">
+              </div>
+            </li>
+
+          </ul>
+
+          <div class="swiper-pagination"></div>
+
+          <div class="swiper-button-prev button"></div>
+          <div class="swiper-button-next button"></div>
+
+        </div>
       </section>
 
       <section>
@@ -68,13 +152,13 @@
               <img class="hei" src="./images/genesis_img1.jpg" alt="">
             </div>
             <div class="img_box">
-              <img class="hei" src="./images/genesis_img2.jpg" alt="">
+              <img src="./images/genesis_img2.jpg" alt="">
             </div>
           </div>
 
           <div class="gallery_center">
             <div class="img_box">
-              <img class="hei" src="./images/genesis_img3.jpg" alt="">
+              <img src="./images/genesis_img3.jpg" alt="">
             </div>
             <div class="img_box">
               <img class="hei" src="./images/genesis_img4.jpg" alt="">
@@ -83,10 +167,10 @@
 
           <div class="gallery_right">
             <div class="img_box">
-              <img class="hei" src="./images/genesis_img5.jpg" alt="">
+              <img class="hei" src="./images/genesis-kr-gallery-gv80-interior-22-popup-1920x960-ko.jpg" alt="">
             </div>
             <div class="img_box">
-              <img class="hei" src="./images/genesis_img6.jpg" alt="">
+              <img src="./images/genesis_img6.jpg" alt="">
             </div>
           </div>
         </div>
