--- a/main.html
+++ b/main.html
@@ -76,22 +76,27 @@
 
 
       <section class="design_section">
-        <div class="design_bg">
-          <img src="./images/genesis_design_bg.jpg" alt="">
-        </div>
-        <div class="design_text">
-          <h2>DESIGN</h2>
-          <div class="design_desc">
-            <p>
-              GV80는 SUV의 역동성(Athletic)과 세단의 우아함(Elegance)이 조화된 외장 디자인과, 볼드한 조형에 여백의 미를 강조한 고급스러운 내장 디자인으로 제네시스의 대형
-              SUV로서의 존재감을 극대화합니다.
-            </p>
+        <div class="design">
+          <div class="design_bg">
+            <img src="./images/genesis_design_bg.jpg" alt="">
           </div>
-        </div>
+          <div class="design_text">
+            <h2>DESIGN</h2>
+            <div class="design_desc">
+              <p>
+                GV80는 SUV의 역동성(Athletic)과 세단의 우아함(Elegance)이 조화된 외장 디자인과, 볼드한 조형에 여백의 미를 강조한 고급스러운 내장 디자인으로 제네시스의 대형
+                SUV로서의 존재감을 극대화합니다.
+              </p>
+            </div>
+          </div>
 
-        <div class="design_img">
-          <img src="./images/genesis-kr-gallery-gv80-interior-22-popup-1920x960-ko.jpg" alt="">
-          <img src="./images/inside.jpg" alt="">
+          <div class="design_img">
+            <img src="./images/genesis-kr-gallery-gv80-interior-22-popup-1920x960-ko.jpg" alt="">
+          </div>
+
+          <div class="design_img1">
+            <img src="./images/inside.jpg" alt="">
+          </div>
         </div>
       </section>
 
