--- a/main.html
+++ b/main.html
@@ -50,6 +50,8 @@
     <main>
       <section class="visual">
         <div class="visual_bg">
+          <video autoplay muted loop
+            src="./images/genesis-kr-performance-gv80-terrain-mode-04-desktop-1920x1080-ko (1).mp4"></video>
           <div class="arrow_bottom">arrow</div>
         </div>
         <div class="text_box">
