--- a/main.html
+++ b/main.html
@@ -50,8 +50,7 @@
     <main>
       <section class="visual">
         <div class="visual_bg">
-          <video autoplay muted loop
-            src="./images/genesis-kr-performance-gv80-terrain-mode-04-desktop-1920x1080-ko (1).mp4"></video>
+          <video autoplay muted loop src="./images/fsdafsda.mp4"></video>
           <div class="arrow_bottom">arrow</div>
         </div>
         <div class="text_box">
@@ -69,12 +68,7 @@
           </div>
         </div>
 
-
       </section>
-
-      <div class="different">
-        <p>* 본 페이지에서 소개되는 상품의 디자인, 색상, 특성, 사양 등은 참고용이며 실제 제품과 다를 수 있습니다.</p>
-      </div>
 
 
       <section class="design_section">
@@ -89,16 +83,17 @@
                 GV80는 SUV의 역동성(Athletic)과 세단의 우아함(Elegance)이 조화된 외장 디자인과, 볼드한 조형에 여백의 미를 강조한 고급스러운 내장 디자인으로 제네시스의 대형
                 SUV로서의 존재감을 극대화합니다.
               </p>
+
+              <div class="design_btn">
+                <button><span>Exterior</span></button>
+                <button><span>Interior</span></button>
+              </div>
             </div>
+
+
           </div>
 
-          <div class="design_img">
-            <img src="./images/genesis-kr-gallery-gv80-interior-22-popup-1920x960-ko.jpg" alt="">
-          </div>
-
-          <div class="design_img1">
-            <img src="./images/inside.jpg" alt="">
-          </div>
+         
         </div>
       </section>
 
