--- a/main.html
+++ b/main.html
@@ -63,8 +63,6 @@
               </p>
               <p class="sub_1">SUV의 역동성과 세단의 우아함의 조화</p>
             </div>
-
-
           </div>
         </div>
 
@@ -89,12 +87,25 @@
                 <button><span>Interior</span></button>
               </div>
             </div>
-
-
           </div>
 
-         
         </div>
+
+        <div class="exterior_pop">
+          <div class="blur">
+            <div class="pop_top">
+              <div class="exter_img">
+                <img src="./images/design_exterior1.jpg" alt="">
+              </div>
+              <div class="exter_desc">
+                <p>sfddsafsdafasd</p>
+              </div>
+            </div>
+
+            <div class="pop_bottom"></div>
+          </div>
+        </div>
+
       </section>
 
 
