--- a/main.html
+++ b/main.html
@@ -92,20 +92,29 @@
         </div>
 
         <div class="exterior_pop">
-          <div class="blur">
-            <div class="pop_top">
-              <div class="exter_img">
-                <img src="./images/design_exterior1.jpg" alt="">
-              </div>
-              <div class="exter_desc">
-                <p>sfddsafsdafasd</p>
-              </div>
+          <div class="pop_top">
+            <div class="exter_img">
+              <img src="./images/design_exterior1.jpg" alt="">
+            </div>
+            <div class="exter_desc">
+              <h2>프론트 디자인</h2>
+              <p>제네시스만의 유니크한 디자인 랭귀지 G-MATRIX를 반영한 크레스트 그릴과 강렬한 쿼드램프는 당당한 품위로 전면부 디자인에 존재감을 더합니다.</p>
+            </div>
+          </div>
+
+          <div class="pop_bottom">
+            <div class="exter_desc">
+              <h2>측면 디자인</h2>
+              <p>전면부터 후면까지 연결된 우아하고 역동적인 파라볼릭 캐릭터 라인과 아래 위치한 두 개의 파워라인은 차체의 우아한 볼륨을 완성하고 펜더를 강조하여 스포티한 SUV 이미지를 구현합니다.
+              </p>
             </div>
 
-            <div class="pop_bottom"></div>
+            <div class="exter_img">
+              <img src="./images/design_exterior2.jpg" alt="">
+            </div>
           </div>
-        </div>
 
+        </div>
       </section>
 
 
