--- a/main.html
+++ b/main.html
@@ -53,19 +53,21 @@
 
     <main>
       <section class="visual">
+
         <div class="visual_bg">
           <video autoplay muted loop src="./images/visual_video.mp4"></video>
           <div class="arrow_bottom">arrow</div>
-        </div>
-        <div class="text_box">
-          <div class="text_inner">
-            <div class="text_top">
-              <p class="sub">GENESIS GV80</p>
-              <p class="tit">
-                시선을 사로잡는<br />
-                역동적 우아함
-              </p>
-              <p class="sub_1">SUV의 역동성과 세단의 우아함의 조화</p>
+
+          <div class="text_box">
+            <div class="text_inner">
+              <div class="text_top">
+                <p class="sub">GENESIS GV80</p>
+                <p class="tit">
+                  시선을 사로잡는<br />
+                  역동적 우아함
+                </p>
+                <p class="sub_1">SUV의 역동성과 세단의 우아함의 조화</p>
+              </div>
             </div>
           </div>
         </div>
@@ -87,8 +89,13 @@
               </p>
 
               <div class="design_btn">
-                <button type="button" class="exterior"><span>Exterior</span></button>
-                <button type="button" class="interior"><span>Interior</span></button>
+                <button type="button" class="exterior">
+                  <span>Exterior</span>
+                </button>
+
+                <button type="button" class="interior">
+                  <span>Interior</span>
+                </button>
               </div>
             </div>
           </div>
@@ -190,7 +197,7 @@
 
           </ul>
 
-          <div class="swiper-pagination"></div>
+          <span class="color_name"></span><div class="swiper-pagination"></div>
 
           <div class="swiper-button-prev button"></div>
           <div class="swiper-button-next button"></div>
