--- a/main.html
+++ b/main.html
@@ -197,7 +197,8 @@
 
           </ul>
 
-          <span class="color_name"></span><div class="swiper-pagination"></div>
+          <span class="color_name"></span>
+          <div class="swiper-pagination"></div>
 
           <div class="swiper-button-prev button"></div>
           <div class="swiper-button-next button"></div>
@@ -205,38 +206,56 @@
         </div>
       </section>
 
-      <section>
+      <section class="gallery_section">
+
         <div class="tit">
-          <h1>GV80을 만나보세요!</h1>
         </div>
+
         <div class="gallery">
           <div class="gallery_left">
             <div class="img_box">
-              <img class="hei" src="./images/genesis_img1.jpg" alt="">
+              <div class="gallery_img">
+                <img class="hei" src="./images/genesis_img1.jpg" alt="">
+              </div>
             </div>
+
             <div class="img_box">
-              <img src="./images/genesis_img2.jpg" alt="">
+              <div class="gallery_img">
+                <img src="./images/genesis_img2.jpg" alt="">
+              </div>
             </div>
           </div>
 
           <div class="gallery_center">
             <div class="img_box">
-              <img src="./images/genesis_img3.jpg" alt="">
+              <div class="gallery_img">
+                <img src="./images/genesis_img3.jpg" alt="">
+              </div>
             </div>
+
             <div class="img_box">
-              <img class="hei" src="./images/genesis_img4.jpg" alt="">
+              <div class="gallery_img">
+                <img class="hei" src="./images/genesis_img4.jpg" alt="">
+              </div>
             </div>
+
           </div>
 
           <div class="gallery_right">
             <div class="img_box">
-              <img class="hei" src="./images/genesis-kr-gallery-gv80-interior-22-popup-1920x960-ko.jpg" alt="">
+              <div class="gallery_img">
+                <img class="hei" src="./images/genesis-kr-gallery-gv80-interior-22-popup-1920x960-ko.jpg" alt="">
+              </div>
             </div>
+
             <div class="img_box">
-              <img src="./images/genesis_img6.jpg" alt="">
+              <div class="gallery_img">
+                <img src="./images/genesis_img6.jpg" alt="">
+              </div>
             </div>
           </div>
         </div>
+
       </section>
     </main>
   </div>
