--- a/main.html
+++ b/main.html
@@ -206,113 +206,38 @@
         </div>
       </section>
 
-      <section class="gallery_section">
 
-        <div class="tit">
-          <h1>GV80 GALLERY</h1>
-        </div>
+      <section class="performance_section">
+        <div class="performance">
+          <h1>GV80의 놀라운 퍼포먼스</h1>
+          <div class="tab">
+            <p class="on">서스펜션</p>
+            <p>테크놀로지</p>
+            <p>BUILD TO PERFORM</p>
+            <p>GV80 Engine</p>
+          </div>
+          <div class="tab_desc">
+            <div class="suspension">
+              <div class="sus">
 
-        <div class="loop_infinite">
-          <div class="loop_container">
+                <img src="./images/performance_img1.jpg" class="sus_bg" />
 
-            <div class="swiper gallery_swiper" dir="ltr">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <div class="gallery_img">
-                    <img src="./images/genesis_img1.jpg" alt="">
-                  </div>
+                <div class="sus_desc">
+                  <p class="tit">프리뷰 전자제어 서스펜션</p>
+                  <p>GV80는 국내 도로 환경에 최적화된 프리뷰 전자제어 서스펜션을 적용하였습니다. 전방 카메라 및 정밀 내비게이션 정보를 통해 전방의 과속 방지턱과 포트홀을 감지하고, 서스펜션의
+                    감쇄력을 조절해 세단과 같은 안락한 승차감을 제공합니다.</p>
                 </div>
 
-                <div class="swiper-slide">
-                  <div class="gallery_img">
-                    <img src="./images/genesis_img2.jpg" alt="">
-                  </div>
-                </div>
-
-                <div class="swiper-slide">
-                  <div class="gallery_img">
-                    <img src="./images/genesis_img3.jpg" alt="">
-                  </div>
-                </div>
-
-                <div class="swiper-slide">
-                  <div class="gallery_img">
-                    <img src="./images/genesis_img4.jpg" alt="">
-                  </div>
-                </div>
-
-                <div class="swiper-slide">
-                  <div class="gallery_img">
-                    <img src="./images/genesis_img6.jpg" alt="">
-                  </div>
-                </div>
               </div>
+
             </div>
-
-            <div class="swiper gallery_swiper" dir="rtl">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <div class="gallery_img">
-                    <img src="./images/design_exterior1.jpg" alt="">
-                  </div>
-                </div>
-
-                <div class="swiper-slide">
-                  <div class="gallery_img">
-                    <img src="./images/genesis_img2.jpg" alt="">
-                  </div>
-                </div>
-
-                <div class="swiper-slide">
-                  <div class="gallery_img">
-                    <img src="./images/genesis_img3.jpg" alt="">
-                  </div>
-                </div>
-
-                <div class="swiper-slide">
-                  <div class="gallery_img">
-                    <img src="./images/genesis_img4.jpg" alt="">
-                  </div>
-                </div>
-
-                <div class="swiper-slide">
-                  <div class="gallery_img">
-                    <img src="./images/genesis_img6.jpg" alt="">
-                  </div>
-                </div>
-              </div>
-            </div>
-
           </div>
         </div>
-
       </section>
     </main>
   </div>
 
-  <script>
-    const gallery = new Swiper('.gallery_swiper', {
-      loop: true,
-      speed: 3000,
-      slidesPerView: '3',
-      autoplay: {
-        delay: 0,
-      },
-      // loopSlides:'1',
 
-      // pagination: {
-      //   el: '.swiper-pagination',
-      //   clickable: true,
-      // },
-
-      // navigation: {
-      //   nextEl: '.swiper-button-next',
-      //   prevEl: '.swiper-button-prev',
-      // },
-
-
-    });
-  </script>
 </body>
 
 
