--- a/main.html
+++ b/main.html
@@ -219,13 +219,26 @@
           <div class="tab_desc">
             <div class="suspension">
               <div class="sus">
-
                 <img src="./images/performance_img1.jpg" class="sus_bg" />
 
                 <div class="sus_desc">
                   <p class="tit">프리뷰 전자제어 서스펜션</p>
                   <p>GV80는 국내 도로 환경에 최적화된 프리뷰 전자제어 서스펜션을 적용하였습니다. 전방 카메라 및 정밀 내비게이션 정보를 통해 전방의 과속 방지턱과 포트홀을 감지하고, 서스펜션의
                     감쇄력을 조절해 세단과 같은 안락한 승차감을 제공합니다.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="technology">
+              <div class="tech">
+                <div class="tech_video">
+                  <video autoplay muted loop src="./images/active_load.mp4"></video>
+                </div>
+                
+                <div class="tech_desc">
+                  <p class="tit">액티브 로드 노이즈 컨트롤</p>
+                  <p>세계 최초로 적용되는 액티브 로드 노이즈 컨트롤은 속도계와 마이크를 통해 내부로 유입되는 엔진 소음을 수집하고 역위상의 음파를 발생시켜 소음을 저감합니다. 평온함 속에서 품격
+                    있는 드라이빙의 즐거움을 드립니다.</p>
                 </div>
 
               </div>
