--- a/main.html
+++ b/main.html
@@ -216,10 +216,11 @@
             <p>BUILD TO PERFORM</p>
             <p>GV80 Engine</p>
           </div>
+
           <div class="tab_desc">
             <div class="suspension">
               <div class="sus">
-                <img src="./images/performance_img1.jpg" class="sus_bg" />
+                <img src="./images/performance_img1.jpg" class="sus_img" />
 
                 <div class="sus_desc">
                   <p class="tit">프리뷰 전자제어 서스펜션</p>
@@ -234,7 +235,7 @@
                 <div class="tech_video">
                   <video autoplay muted loop src="./images/active_load.mp4"></video>
                 </div>
-                
+
                 <div class="tech_desc">
                   <p class="tit">액티브 로드 노이즈 컨트롤</p>
                   <p>세계 최초로 적용되는 액티브 로드 노이즈 컨트롤은 속도계와 마이크를 통해 내부로 유입되는 엔진 소음을 수집하고 역위상의 음파를 발생시켜 소음을 저감합니다. 평온함 속에서 품격
@@ -244,6 +245,41 @@
               </div>
 
             </div>
+
+            <div class="buildto">
+              <div class="build">
+                <img src="./images/performance_img2.jpg" class="build_img" />
+
+                <div class="build_desc">
+                  <p class="tit">
+                    AWD 시스템(전자식 차동제한장치 적용)
+                  </p>
+
+                  <p>
+                    온로드, 오프로드 및 다양한 주행 환경에 따라 구동력을 최적으로 배분하여 뛰어난 주행 성능을 발휘하며 전후 구동력 배분 시스템(AWD)과 좌우 구동력 배분 시스템(전자식
+                    차동제한장치, e-LSD)의 결합으로 험로에서도 안정적인 주행이 가능합니다.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="gvengine">
+              <div class="engine">
+                <img src="./images/performance_img3.jpg" class="engine_img" />
+
+                <div class="engine_desc">
+                  <p class="tit">
+                    가솔린 2.5 터보 엔진
+                  </p>
+
+                  <p>
+                    성능과 경제성을 겸비한 가솔린 터보 엔진입니다. 운전 조건에 맞게 최적으로 연료를 분사하는 듀얼 인젝션 시스템을 적용하고, 수냉식 인터쿨러 및 가변 분리 냉각 시스템을 통해 응답성 및 안정성을 개선했습니다.
+                  </p>
+                </div>
+              </div>
+            </div>
+            
           </div>
         </div>
       </section>
