--- a/main.html
+++ b/main.html
@@ -197,7 +197,6 @@
 
           </ul>
 
-          <span class="color_name"></span>
           <div class="swiper-pagination"></div>
 
           <div class="swiper-button-prev button"></div>
@@ -224,8 +223,10 @@
 
                 <div class="sus_desc">
                   <p class="tit">프리뷰 전자제어 서스펜션</p>
-                  <p>GV80는 국내 도로 환경에 최적화된 프리뷰 전자제어 서스펜션을 적용하였습니다. 전방 카메라 및 정밀 내비게이션 정보를 통해 전방의 과속 방지턱과 포트홀을 감지하고, 서스펜션의
-                    감쇄력을 조절해 세단과 같은 안락한 승차감을 제공합니다.</p>
+                  <p>
+                    GV80는 국내 도로 환경에 최적화된 프리뷰 전자제어 서스펜션을 적용하였습니다. 전방 카메라 및 정밀 내비게이션 정보를 통해 전방의 과속 방지턱과 포트홀을 감지하고, 서스펜션의
+                    감쇄력을 조절해 세단과 같은 안락한 승차감을 제공합니다.
+                  </p>
                 </div>
               </div>
             </div>
@@ -238,8 +239,10 @@
 
                 <div class="tech_desc">
                   <p class="tit">액티브 로드 노이즈 컨트롤</p>
-                  <p>세계 최초로 적용되는 액티브 로드 노이즈 컨트롤은 속도계와 마이크를 통해 내부로 유입되는 엔진 소음을 수집하고 역위상의 음파를 발생시켜 소음을 저감합니다. 평온함 속에서 품격
-                    있는 드라이빙의 즐거움을 드립니다.</p>
+                  <p>
+                    세계 최초로 적용되는 액티브 로드 노이즈 컨트롤은 속도계와 마이크를 통해 내부로 유입되는 엔진 소음을 수집하고 역위상의 음파를 발생시켜 소음을 저감합니다. 평온함 속에서 품격
+                    있는 드라이빙의 즐거움을 드립니다.
+                  </p>
                 </div>
 
               </div>
@@ -269,20 +272,71 @@
                 <img src="./images/performance_img3.jpg" class="engine_img" />
 
                 <div class="engine_desc">
-                  <p class="tit">
-                    가솔린 2.5 터보 엔진
-                  </p>
+                  <div class="turbo">
+                    <p class="tit">
+                      가솔린 2.5 터보 엔진
+                    </p>
 
-                  <p>
-                    성능과 경제성을 겸비한 가솔린 터보 엔진입니다. 운전 조건에 맞게 최적으로 연료를 분사하는 듀얼 인젝션 시스템을 적용하고, 수냉식 인터쿨러 및 가변 분리 냉각 시스템을 통해 응답성 및 안정성을 개선했습니다.
-                  </p>
+                    <p>
+                      성능과 경제성을 겸비한 가솔린 터보 엔진입니다. 운전 조건에 맞게 최적으로 연료를 분사하는 듀얼 인젝션 시스템을 적용하고, 수냉식 인터쿨러 및 가변 분리 냉각 시스템을 통해
+                      응답성
+                      및 안정성을 개선했습니다.
+                    </p>
+                  </div>
+
+                  <div class="engine_count">
+                    <div class="high_ps">
+                      <p class="en_tit">최고출력</p>
+                      <p><span class="ps count"></span>ps</p>
+                      <p><span class="rpm">3,800</span>rpm</p>
+                    </div>
+
+                    <div class="max_tok">
+                      <p class="en_tit">최대토크</p>
+                      <p><span class="kgf count"></span>kgf.m</p>
+                      <p><span class="rpm">1,650</span>~<span class="rpm">4,000</span>rpm</p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-            
+
           </div>
         </div>
       </section>
+
+      <section class="gallery_section">
+        <div class="gallery">
+          <h1>GV80 GALLERY</h1>
+
+          <div class="swiper gallery_div">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="imgbox">
+                  <img src="./images/genesis_img1.jpg" alt="">
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="imgbox">
+                  <img src="./images/genesis_img2.jpg" alt="">
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="imgbox">
+                  <img src="./images/genesis_img3.jpg" alt="">
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="imgbox">
+                  <img src="./images/genesis_img4.jpg" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </section>
+
     </main>
   </div>
 
