--- a/main.html
+++ b/main.html
@@ -14,6 +14,7 @@
 
   <!-- gsap -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.1/ScrollToPlugin.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 </head>
 
@@ -51,7 +52,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="content">
       <section class="visual">
 
         <div class="visual_bg">
@@ -310,30 +311,78 @@
           <h1>GV80 GALLERY</h1>
 
           <div class="swiper gallery_div">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
+            <ul class="swiper-wrapper">
+              <li class="swiper-slide">
                 <div class="imgbox">
                   <img src="./images/genesis_img1.jpg" alt="">
                 </div>
-              </div>
-              <div class="swiper-slide">
+              </li>
+
+              <li class="swiper-slide">
                 <div class="imgbox">
                   <img src="./images/genesis_img2.jpg" alt="">
                 </div>
-              </div>
-              <div class="swiper-slide">
+              </li>
+
+              <li class="swiper-slide">
                 <div class="imgbox">
                   <img src="./images/genesis_img3.jpg" alt="">
                 </div>
-              </div>
-              <div class="swiper-slide">
+              </li>
+
+              <li class="swiper-slide">
                 <div class="imgbox">
                   <img src="./images/genesis_img4.jpg" alt="">
                 </div>
-              </div>
-            </div>
+              </li>
+
+              <li class="swiper-slide">
+                <div class="imgbox">
+                  <img src="./images/genesis_img6.jpg" alt="">
+                </div>
+              </li>
+
+              <li class="swiper-slide">
+                <div class="imgbox">
+                  <img src="./images/design_exterior1.jpg" alt="">
+                </div>
+              </li>
+
+            </ul>
+
           </div>
 
+          <div class="util">
+            <ul>
+              <li>
+                <div class="util_gif">
+                  <img src="./images/util1.gif" alt="">
+                </div>
+                <p>견적내기</p>
+              </li>
+
+              <li>
+                <div class="util_gif">
+                  <img src="./images/util2.gif" alt="">
+                </div>
+                <p>구매 상담 신청</p>
+              </li>
+
+              <li>
+                <div class="util_gif">
+                  <img src="./images/util3.gif" alt="">
+                </div>
+                <p>시승 신청</p>
+              </li>
+
+              <li>
+                <div class="util_gif">
+                  <img src="./images/util4.gif" alt="">
+                </div>
+                <p>카탈로그</p>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
 
