--- a/main.html
+++ b/main.html
@@ -81,26 +81,35 @@
           <div class="design_bg">
             <img src="./images/genesis_design_bg.jpg" alt="">
           </div>
-          <div class="design_text">
-            <h2>DESIGN</h2>
-            <div class="design_desc">
-              <p>
-                GV80는 SUV의 역동성(Athletic)과 세단의 우아함(Elegance)이 조화된 외장 디자인과, 볼드한 조형에 여백의 미를 강조한 고급스러운 내장 디자인으로 제네시스의 대형
-                SUV로서의 존재감을 극대화합니다.
-              </p>
+          <div class="design_inner">
+            <div class="design_text">
+              <h2>DESIGN</h2>
 
-              <div class="design_btn">
-                <button type="button" class="exterior">
-                  <span>Exterior</span>
-                </button>
+              <div class="design_desc">
+                <p>
+                  GV80는 SUV의 역동성(Athletic)과 세단의 우아함(Elegance)이 조화된 외장 디자인과, 볼드한 조형에 여백의 미를 강조한 고급스러운 내장 디자인으로 제네시스의 대형
+                  SUV로서의 존재감을 극대화합니다.
+                </p>
 
-                <button type="button" class="interior">
-                  <span>Interior</span>
-                </button>
+                <div class="design_btn">
+                  <button type="button" class="exterior">
+                    <span>Exterior</span>
+                  </button>
+
+                  <button type="button" class="interior">
+                    <span>Interior</span>
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <div class="design_text2">
+              <div class="design_desc2">
+                <p class="tit">INTRODUCTING GV80 DESIGN</p>
+                <p class="desc">다이내믹한 볼륨과 스포티한 실루엣. GV80는 과감하고 진보적인 제네시스 브랜드의 첫 럭셔리 SUV로서 차별화된 디자인을 구현합니다.</p>
               </div>
             </div>
           </div>
-
         </div>
 
         <div class="exterior_pop popup">
