--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
   <title>Genesis</title>
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src="./js/main.js" defer></script>
@@ -219,98 +220,114 @@
       <section class="performance_section">
         <div class="performance">
           <h1>GV80의 놀라운 퍼포먼스</h1>
-          <div class="tab">
-            <p class="on">서스펜션</p>
-            <p>테크놀로지</p>
-            <p>BUILD TO PERFORM</p>
-            <p>GV80 Engine</p>
-          </div>
 
-          <div class="tab_desc">
-            <div class="suspension">
-              <div class="sus">
-                <img src="./images/performance_img1.jpg" class="sus_img" />
+          <div class="performance_inner">
+            <div class="tab">
 
-                <div class="sus_desc">
-                  <p class="tit">프리뷰 전자제어 서스펜션</p>
+              <div class="on">
+                <div class="tab_tit">
+                  <p>서스펜션</p>
+                </div>
+                <div class="desc">
                   <p>
                     GV80는 국내 도로 환경에 최적화된 프리뷰 전자제어 서스펜션을 적용하였습니다. 전방 카메라 및 정밀 내비게이션 정보를 통해 전방의 과속 방지턱과 포트홀을 감지하고, 서스펜션의
                     감쇄력을 조절해 세단과 같은 안락한 승차감을 제공합니다.
                   </p>
                 </div>
               </div>
-            </div>
 
-            <div class="technology">
-              <div class="tech">
-                <div class="tech_video">
-                  <video autoplay muted loop src="./images/active_load.mp4"></video>
+              <div>
+                <div class="tab_tit">
+                  <p>신규플랫폼</p>
                 </div>
-
-                <div class="tech_desc">
-                  <p class="tit">액티브 로드 노이즈 컨트롤</p>
+                <div class="desc">
                   <p>
-                    세계 최초로 적용되는 액티브 로드 노이즈 컨트롤은 속도계와 마이크를 통해 내부로 유입되는 엔진 소음을 수집하고 역위상의 음파를 발생시켜 소음을 저감합니다. 평온함 속에서 품격
-                    있는 드라이빙의 즐거움을 드립니다.
+                    후륜구동 SUV에 최적화된 신규 플랫폼은 신규 서스펜션 구조로 주행 성능을 확보하고 경량화 기술 및 SUV 전용 골격 강화 구조를 통해 주행강성을 확보하였습니다. 도어, 후드,
+                    테일게이트에는 알루미늄 차체를 적용하고 차체 평균 인장강도를 대폭 증대하여 동급 최고 수준의 충돌 안전성을 확보하고 승객실 주변에 핫스템핑 강판을 확대 적용하여 승객실 최우선
+                    안전을
+                    강화하였습니다.
                   </p>
                 </div>
-
               </div>
 
-            </div>
-
-            <div class="buildto">
-              <div class="build">
-                <img src="./images/performance_img2.jpg" class="build_img" />
-
-                <div class="build_desc">
-                  <p class="tit">
-                    AWD 시스템(전자식 차동제한장치 적용)
-                  </p>
-
+              <div>
+                <div class="tab_tit">
+                  <p>BUILD TO PERFORM</p>
+                </div>
+                <div class="desc">
                   <p>
                     온로드, 오프로드 및 다양한 주행 환경에 따라 구동력을 최적으로 배분하여 뛰어난 주행 성능을 발휘하며 전후 구동력 배분 시스템(AWD)과 좌우 구동력 배분 시스템(전자식
                     차동제한장치, e-LSD)의 결합으로 험로에서도 안정적인 주행이 가능합니다.
                   </p>
                 </div>
               </div>
+
+              <div>
+                <div class="tab_tit">
+                  <p>GV80 Engine</p>
+                </div>
+                <div class="desc">
+                  <p>
+                    성능과 경제성을 겸비한 가솔린 터보 엔진입니다. 운전 조건에 맞게 최적으로 연료를 분사하는 듀얼 인젝션 시스템을 적용하고, 수냉식 인터쿨러 및 가변 분리 냉각 시스템을 통해
+                    응답성
+                    및 안정성을 개선했습니다.
+                  </p>
+                </div>
+              </div>
+
             </div>
 
+            <div class="tab_bg">
 
-            <div class="gvengine">
-              <div class="engine">
-                <img src="./images/performance_img3.jpg" class="engine_img" />
+              <div class="suspension">
+                <div class="sus">
+                  <img src="./images/performance_img1.jpg" class="sus_img" />
+                </div>
+              </div>
 
-                <div class="engine_desc">
-                  <div class="turbo">
-                    <p class="tit">
-                      가솔린 2.5 터보 엔진
-                    </p>
+              <div class="technology">
+                <div class="tech">
+                  <img src="./images/performance_img4.jpg" alt="tech_img">
+                </div>
 
-                    <p>
-                      성능과 경제성을 겸비한 가솔린 터보 엔진입니다. 운전 조건에 맞게 최적으로 연료를 분사하는 듀얼 인젝션 시스템을 적용하고, 수냉식 인터쿨러 및 가변 분리 냉각 시스템을 통해
-                      응답성
-                      및 안정성을 개선했습니다.
-                    </p>
-                  </div>
+              </div>
 
-                  <div class="engine_count">
-                    <div class="high_ps">
-                      <p class="en_tit">최고출력</p>
-                      <p><span class="ps count"></span>ps</p>
-                      <p><span class="rpm">3,800</span>rpm</p>
+              <div class="buildto">
+                <div class="build">
+                  <img src="./images/performance_img2.jpg" class="build_img" />
+                </div>
+              </div>
+
+
+              <div class="gvengine">
+                <div class="engine">
+                  <img src="./images/performance_img3.jpg" class="engine_img" />
+
+                  <div class="engine_desc">
+                    <div class="turbo">
+                      <p class="tit">
+                        가솔린 2.5 터보 엔진
+                      </p>
                     </div>
 
-                    <div class="max_tok">
-                      <p class="en_tit">최대토크</p>
-                      <p><span class="kgf count"></span>kgf.m</p>
-                      <p><span class="rpm">1,650</span>~<span class="rpm">4,000</span>rpm</p>
+                    <div class="engine_count">
+                      <div class="high_ps">
+                        <p class="en_tit">최고출력</p>
+                        <p><span class="ps count"></span>ps</p>
+                        <p><span class="rpm">3,800</span>rpm</p>
+                      </div>
+
+                      <div class="max_tok">
+                        <p class="en_tit">최대토크</p>
+                        <p><span class="kgf count"></span>kgf.m</p>
+                        <p><span class="rpm">1,650</span>~<span class="rpm">4,000</span>rpm</p>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
 
+            </div>
           </div>
         </div>
       </section>
