--- a/main.html
+++ b/main.html
@@ -224,8 +224,8 @@
           <div class="performance_inner">
             <div class="tab">
 
-              <div class="on">
-                <div class="tab_tit">
+              <div>
+                <div class="tab_tit on">
                   <p>서스펜션</p>
                 </div>
                 <div class="desc">
