--- a/main.html
+++ b/main.html
@@ -242,10 +242,7 @@
                 </div>
                 <div class="desc">
                   <p>
-                    후륜구동 SUV에 최적화된 신규 플랫폼은 신규 서스펜션 구조로 주행 성능을 확보하고 경량화 기술 및 SUV 전용 골격 강화 구조를 통해 주행강성을 확보하였습니다. 도어, 후드,
-                    테일게이트에는 알루미늄 차체를 적용하고 차체 평균 인장강도를 대폭 증대하여 동급 최고 수준의 충돌 안전성을 확보하고 승객실 주변에 핫스템핑 강판을 확대 적용하여 승객실 최우선
-                    안전을
-                    강화하였습니다.
+                    후륜구동 SUV에 최적화된 신규 플랫폼은 신규 서스펜션 구조로 주행 성능을 확보하고 경량화 기술 및 SUV 전용 골격 강화 구조를 통해 주행강성을 확보하였습니다. 
                   </p>
                 </div>
               </div>
