--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
 
       <div class="nav_box">
         <ul>
-          <li>
+          <li class="on">
             <a href="#!">GV80</a>
           </li>
 
