--- a/main.html
+++ b/main.html
@@ -242,7 +242,7 @@
                 </div>
                 <div class="desc">
                   <p>
-                    후륜구동 SUV에 최적화된 신규 플랫폼은 신규 서스펜션 구조로 주행 성능을 확보하고 경량화 기술 및 SUV 전용 골격 강화 구조를 통해 주행강성을 확보하였습니다. 
+                    후륜구동 SUV에 최적화된 신규 플랫폼은 신규 서스펜션 구조로 주행 성능을 확보하고 경량화 기술 및 SUV 전용 골격 강화 구조를 통해 주행강성을 확보하였습니다.
                   </p>
                 </div>
               </div>
@@ -410,11 +410,15 @@
       </section>
 
     </main>
+
+    <div class="popup_bg">
+      <div class="popup">
+        <h2>본 페이지는 1550이상의 해상도에서 최적으로 보이며, 전체화면으로 보시기를 권장드립니다.</h2>
+        <button type="button" id="close">닫기</button>
+      </div>
+    </div>
   </div>
 
-
 </body>
-
-
 
 </html>
